sanger/sites/scfind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scfind
spec:
  selector:
    matchLabels:
      app: scfind
  replicas: 1
  template:
    metadata:
      name: scfind
      labels:
        app: scfind
    spec:
      volumes:
        - name: w2v
          persistentVolumeClaim:
            claimName: scfind-pvc
      containers:
      - image: quay.io/hemberg-group/scfind-shiny:3.0.0
        imagePullPolicy: IfNotPresent
        name: scfind
        volumeMounts:
        - name: w2v
          mountPath: /w2v
        ports:
        - containerPort: 3838
          hostPort: 9898
          name: scfind
        resources:
          requests:
            memory: "20Gi"
            cpu: 4
          limits:
            memory: "40Gi"
            cpu: 6
        livenessProbe:
          httpGet: 
            path: /
            port: scfind
          initialDelaySeconds: 10
          timeoutSeconds: 20
          periodSeconds: 240
